KAN-3 ajustements : taille police, taille logo responsive, correction bouton du menu à aligner à droite

--- a/src/_containers.scss
+++ b/src/_containers.scss
@@ -141,15 +141,15 @@
 nav {
 
     width: 98%;
-    padding: 10px;
+    padding: 0 1%;
     overflow: hidden;
     position: fixed;
-    height: 80px;
+    height: 50px;
     top: 0;
     left: 0;
     z-index: 1000;
     min-height: 50px;
-    background-color: $general-bg-color;
+    background-color: $navbar-bg-color;
 
     @media (max-width: $md) {
         .navbar:target {
@@ -176,12 +176,13 @@ nav {
         justify-content: space-evenly;
         align-items: center;
         align-content: center;
-        background-color: $general-bg-color;
+        background-color: $navbar-bg-color;
         /* animate slide up/down */
         transform: translateY(-100%);
         transition: transform 0.2s ease;
         position: relative;
         left: 0;
+        top: -16;
         height: 100vh;
 
         @include responsive($md) {
@@ -190,8 +191,9 @@ nav {
             align-items: center;
             transform: translateY(0);
             height: 100%;
+            top: 0;
 
-            & li:last-child {
+            & li:last-of-type {
                 margin-left: auto;
 
             }
@@ -199,6 +201,7 @@ nav {
 
         li {
             margin: 0 15px;
+            font-size: 16px;
 
             & a:hover {
                 font-weight: 700;
